# emarework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COPILOT_SESSION_HAFIZA.md  DERVISHIN_CEYIZI.md  DOSYA_YAPISI.md  EMAREWORK_HAFIZA.md  EMARE_AI_COLLECTIVE.md  EMARE_ANAYASA.md  EMARE_ORTAK_HAFIZA.md  Makefile  QUICKSTART_DEV.md  README.md  anahtarlar.py  ceyiz_hazirla.py  deploy.json  emarework hafıza.md  main.py  proje_durum_raporu.py  setup.sh  start.sh
.github/: copilot-instructions.md
koordinasyon-sistemi/: .env.example  .pylintrc  BUGFIX.md  Dockerfile  EMAREULAK_READY.md  HIVE_COORDINATOR_HAFIZA.md  PRODUCTION_READY.md  README.md  docker-compose.yml  py.typed  pyproject-typecheck.toml  pyproject.toml  pyrightconfig.json  requirements.txt  start_api.sh  start_dev.sh  test_100_projects.py  test_imports.py
koordinasyon-sistemi/config/: settings.yml  test_100_projects.yml
koordinasyon-sistemi/scripts/: init_db.sql
koordinasyon-sistemi/src/: __init__.py  __main__.py  cache.py  celery_app.py  cli.py  config.py  dergah_sohbet.py  dervish_capabilities.py  emare_ecosystem.py  emare_workers.py  emareulak_bridge.py  project_orchestrator.py  project_splitter.py  sim_runner.py  tasks.py
koordinasyon-sistemi/src/api/: main.py
koordinasyon-sistemi/src/db/: __init__.py  database.py  models.py  repository.py
koordinasyon-sistemi/src/models/: __init__.py
koordinasyon-sistemi/src/services/: coordination_engine.py  message_cascade.py  task_distributor.py  year_simulation.py
koordinasyon-sistemi/src/utils/: addressing.py
koordinasyon-sistemi/tests/: test_core.py
(+71 files in other folders)
