[project]
name = "hive-coordinator"
version = "1.0.0"
description = "9 Milyar Düğümlü Hiyerarşik Yazılım Ekibi Koordinasyon Sistemi"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "pydantic>=2.5.0",
    "celery>=5.3.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "alembic>=1.13.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
]

[project.scripts]
hive = "src.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
